# My_Avito2

./: convert.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt  user.csv
My_Avito/: asgi.py  auth_urls.py  settings.py  urls.py  wsgi.py
ads/: admin.py  cat_urls.py  convert.py  image_urls.py  models.py  permissions.py  selection_urls.py  serializers.py  urls.py  users_url.py  validators.py  views.py
ads/fixtures/: user.json
ads/migrations/: 0001_initial.py  0002_alter_ads_address_alter_ads_price.py  0002_alter_users_first_name_alter_users_last_name.py  0002_alter_users_id.py  0002_rename_adress_ads_address.py  0003_alter_users_age_alter_users_first_name_and_more.py  0003_remove_ads_author_ads_author_id.py  0004_alter_ads_description_alter_ads_price.py  0004_remove_users_location_users_location.py  0005_alter_ads_price.py  0005_alter_users_location.py  0006_remove_ads_address.py  0006_remove_users_location_users_location.py  0007_alter_user_first_name_alter_user_last_name_and_more.py  0007_selection.py  0008_alter_users_role.py  0008_remove_user_location_user_location.py  0009_rename_user_users.py  0009_selection_items.py  0010_alter_users_location.py  0011_remove_users_location_users_location.py  0012_us.py  0013_alter_ads_options_alter_categories_options_and_more.py  0014_remove_users_location_users_location.py  0015_alter_ads_price.py
authentication/: models.py
fixtures/: ads.json  categories.json  location.json  us.json  user.json
tests/: conftest.py  factories.py  fixtures.py
tests/Selection/: selection_create_test.py
(+3 files in other folders)
