[tool.poetry]
name = "my-avito"
version = "0.1.0"
description = ""
authors = ["Влада <gibinav@mail.ru>"]
readme = "README.md"
packages = [{include = "my_avito"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
